--- a/labs/lab1/lab1.ipynb
+++ b/labs/lab1/lab1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,37 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import this"
    ]
@@ -99,17 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import keyword\n",
     "print(keyword.kwlist)"
@@ -160,40 +124,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4 raised to the power of 8 =  65536\n",
-      "Quotient and remainder of the euclidean division of 17 by 3 =  5 2\n",
-      "a, b =  1 2\n",
-      "a, b =  2 1\n",
-      "a =  4\n",
-      "real =  1.0 imag =  2.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"4 raised to the power of 8 = \", 4**8)\n",
-    "print(\"Quotient and remainder of the euclidean division of 17 by 3 = \", 17//3, 17%3)\n",
-    "\n",
-    "a,b = 1,2\n",
-    "print(\"a, b = \", a,b)\n",
-    "a,b = b,a\n",
-    "print(\"a, b = \", a,b)\n",
-    "\n",
-    "a *= 2\n",
-    "print(\"a = \", a)\n",
-    "\n",
-    "z = complex(1,2)\n",
-    "print(\"real = \", z.real, \"imag = \", z.imag)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -208,6 +138,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string = \"\"\n",
+    "string2 = str()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,6 +156,46 @@
     "- What are the 10 last letters of the alphabet\n",
     "- What are the 5th to the 10th letters of the alphabet\n",
     "- Create a new string where the 26 letters are converted to upper case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcdefghijklmnopqrstuvwxyz\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb Cell 19\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb#Y105sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m letter_12 \u001b[39m=\u001b[39m alphabet[\u001b[39m11\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb#Y105sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m last_10_letters \u001b[39m=\u001b[39m alphabet[\u001b[39m-\u001b[39m\u001b[39m10\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb#Y105sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m get_5_to_10_letters \u001b[39m=\u001b[39m alphabet[\u001b[39m5\u001b[39;49m,\u001b[39m9\u001b[39;49m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb#Y105sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m upper_alphabet \u001b[39m=\u001b[39m alphabet\u001b[39m.\u001b[39mupper()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb#Y105sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(upper_alphabet)\n",
+      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "\n",
+    "alphabet = string.ascii_lowercase\n",
+    "print(alphabet)\n",
+    "\n",
+    "letter_12 = alphabet[11]\n",
+    "last_10_letters = alphabet[-10]\n",
+    "get_5_to_10_letters = alphabet[5:9]\n",
+    "\n",
+    "upper_alphabet = alphabet.upper()\n",
+    "\n",
+    "print(upper_alphabet)\n",
+    "\n"
    ]
   },
   {
@@ -263,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
