--- a/Labs/Lab2/lab2.ipynb
+++ b/Labs/Lab2/lab2.ipynb
@@ -7,11 +7,11 @@
     "# Practical session 2 - Practise with classic libraries\n",
     "\n",
     "Students (pair):\n",
-    "- [Student 1]([link](https://github.com/username1))\n",
-    "- [Student 2]([link](https://github.com/username2))"
+    "- [Antonin Morel]([link](https://github.com/Cbonvieuxziz))\n",
+    "- [Benjamin Renoux]([link](https://github.com/Ben1306))"
    ]
   },
- {
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,11 +88,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/benji/Documents/G3/Cours/Python/git_anto/python_sdia/Labs/Lab2/lab2.ipynb Cell 8\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/git_anto/python_sdia/Labs/Lab2/lab2.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# your code\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/git_anto/python_sdia/Labs/Lab2/lab2.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/git_anto/python_sdia/Labs/Lab2/lab2.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m seed \u001b[39m=\u001b[39m \u001b[39m8\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/git_anto/python_sdia/Labs/Lab2/lab2.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m rng \u001b[39m=\u001b[39m seed\u001b[39m.\u001b[39mdefault_rng()\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "# your code\n",
+    "import numpy as np \n",
+    "\n",
+    "seed = 8\n",
+    "rng = seed.default_rng()\n"
    ]
   },
   {
@@ -435,10 +451,10 @@
     "    &\\forall \\mathbf{U} = (\\mathbf{U}_h, \\mathbf{U}_v), \\mathbf{V} = (\\mathbf{V}_h, \\mathbf{V}_v) \\in \\mathbb{C}^{M \\times N} \\times \\mathbb{C}^{M \\times N}, \\; \\langle \\mathbf{U}, \\mathbf{V} \\rangle_{\\mathbb{C}^{M \\times N} \\times \\mathbb{C}^{M \\times N}} = \\langle \\mathbf{U}_h, \\mathbf{V}_h \\rangle_{\\mathbb{C}^{M \\times N}} + \\langle \\mathbf{U}_v, \\mathbf{V}_v \\rangle_{\\mathbb{C}^{M \\times N}}.\n",
     "\\end{align}\n",
     "\n",
-    "> Hint: to verify `gradient2D_adjoint` is the adjoint of `gradient2D`, evaluate the scalar products above for randomly drawn matrices. Set the random generator to a known state for reproducibility (see [Exercise 1](#ex1)).",
-"\n",   
-"> `np.conj` is useful."
-]
+    "> Hint: to verify `gradient2D_adjoint` is the adjoint of `gradient2D`, evaluate the scalar products above for randomly drawn matrices. Set the random generator to a known state for reproducibility (see [Exercise 1](#ex1)).\n",
+    "\n",
+    "> `np.conj` is useful."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -530,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.10"
   },
   "vscode": {
    "interpreter": {
