--- a/labs/lab1/lab1.ipynb
+++ b/labs/lab1/lab1.ipynb
@@ -7,8 +7,8 @@
     "# Practical session 1 - Some Python basics\n",
     "\n",
     "Students (pair):\n",
-    "- [Student 1]([link](https://github.com/username1))\n",
-    "- [Student 2]([link](https://github.com/username2))"
+    "- [Antonin Morel]([link](https://github.com/Cbonvieuxziz))\n",
+    "- [Benjamin Renoux]([link](https://github.com/Ben1306))"
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n"
+     ]
+    }
+   ],
    "source": [
     "import keyword\n",
     "print(keyword.kwlist)"
@@ -139,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,25 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "abcdefghijklmnopqrstuvwxyz\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb Cell 19\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb#Y105sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m letter_12 \u001b[39m=\u001b[39m alphabet[\u001b[39m11\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb#Y105sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m last_10_letters \u001b[39m=\u001b[39m alphabet[\u001b[39m-\u001b[39m\u001b[39m10\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb#Y105sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m get_5_to_10_letters \u001b[39m=\u001b[39m alphabet[\u001b[39m5\u001b[39;49m,\u001b[39m9\u001b[39;49m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb#Y105sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m upper_alphabet \u001b[39m=\u001b[39m alphabet\u001b[39m.\u001b[39mupper()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/benji/Documents/G3/Cours/Python/Labs/Lab1/lab1.ipynb#Y105sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(upper_alphabet)\n",
-      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
+      "Lowercase alphabet :  abcdefghijklmnopqrstuvwxyz\n",
+      "12th letter of alphabet :  l\n",
+      "Last 10 letters of alphabet :  qrstuvwxyz\n",
+      "Letters from 5 to 10 :  efghi\n",
+      "Uppercase alphabet :  ABCDEFGHIJKLMNOPQRSTUVWXYZ\n"
      ]
     }
    ],
@@ -186,15 +187,18 @@
     "import string\n",
     "\n",
     "alphabet = string.ascii_lowercase\n",
-    "print(alphabet)\n",
+    "print(\"Lowercase alphabet : \",alphabet)\n",
     "\n",
     "letter_12 = alphabet[11]\n",
-    "last_10_letters = alphabet[-10]\n",
-    "get_5_to_10_letters = alphabet[5:9]\n",
+    "last_10_letters = alphabet[-10:]\n",
+    "get_5_to_10_letters = alphabet[4:9]\n",
     "\n",
     "upper_alphabet = alphabet.upper()\n",
     "\n",
-    "print(upper_alphabet)\n",
+    "print(\"12th letter of alphabet : \", letter_12)\n",
+    "print(\"Last 10 letters of alphabet : \", last_10_letters)\n",
+    "print(\"Letters from 5 to 10 : \", get_5_to_10_letters)\n",
+    "print(\"Uppercase alphabet : \",upper_alphabet)\n",
     "\n"
    ]
   },
@@ -326,10 +330,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "empty_set = {}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Compute the intersection between $A = \\{1, 2, 3\\}$ and $B = \\{2, 4, 5, 6\\}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intersection :  {2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = {1,2,3}\n",
+    "B = {2,4,5,6}\n",
+    "\n",
+    "intersection = A.intersection(B)\n",
+    "\n",
+    "print(\"Intersection : \", intersection)"
    ]
   },
   {
@@ -344,11 +379,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is not contained\n",
+      "{0, 4, 5, 6, 7, 8, 9, 10}\n"
+     ]
+    }
+   ],
    "source": [
-    "x = {0, 1, 2, 3, 6, 7, 8, 9, 10}"
+    "x = {0, 1, 2, 3, 6, 7, 8, 9, 10}\n",
+    "\n",
+    "x = x.union({4,5,6})\n",
+    "\n",
+    "x = x.difference({1,2,3})\n",
+    "\n",
+    "if(x in {1, 2, 4, 5, 6, 10}):\n",
+    "    print(\"x is contained\")\n",
+    "else:\n",
+    "    print(\"x is not contained\")\n",
+    "\n",
+    "print(x)"
    ]
   },
   {
@@ -432,6 +487,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In place odd value list :  [1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29]\n",
+      "Functionnal odd value list :  [1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29]\n"
+     ]
+    }
+   ],
+   "source": [
+    "odd_values = [x for x in range(31) if x % 2 == 1]\n",
+    "def create_odd_list():\n",
+    "    temp_lst = []\n",
+    "    for k in range(31):\n",
+    "        if k % 2 == 1:\n",
+    "            temp_lst.append(k)\n",
+    "    return temp_lst\n",
+    "\n",
+    "odd_values2 = create_odd_list()\n",
+    "\n",
+    "print(\"In place odd value list : \", odd_values)\n",
+    "print(\"Functionnal odd value list : \", odd_values2)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -444,11 +528,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 'fizbuz', 'fiz', 'fizbuz', 7, 8, 'buz']\n"
+     ]
+    }
+   ],
    "source": [
-    "x = [2, 1, 3, 31, 35, 20, 70, 132, 144, 49]"
+    "x = [2, 1, 3, 31, 35, 20, 70, 132, 144, 49]\n",
+    "\n",
+    "x_modified = list(x)\n",
+    "for index,k in enumerate(x_modified):\n",
+    "    if (k%5==0 and k%7!=0):\n",
+    "        x_modified[index] = \"fiz\"\n",
+    "    elif (k%5!=0 and k%7==0):\n",
+    "        x_modified[index] = \"buz\"\n",
+    "    elif (k%5==0 and k%7==0):\n",
+    "        x_modified[index] = \"fizbuz\"\n",
+    "    else:\n",
+    "        x_modified[index] = index\n",
+    "\n",
+    "print(x_modified)\n"
    ]
   },
   {
@@ -461,6 +566,45 @@
     "- `\"How nice!\"` if `course` is `\"meditation\"` (any kind of capitalization)\n",
     "- `\"You're not at Hogwarts\"` if `course` is `\"magic\"` (any kind of capitalization)\n",
     "- otherwise `\"What is this COURSE?\"` if `course` is anything else."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is this COURSE?\n",
+      "That is very useful!\n",
+      "That is very useful!\n",
+      "How nice!\n",
+      "You're not at Hogwarts\n"
+     ]
+    }
+   ],
+   "source": [
+    "def statements(course):\n",
+    "    normalized_str = course.lower()\n",
+    "    if (normalized_str == \"maths\"):\n",
+    "        print(\"That is very useful!\")\n",
+    "    elif (normalized_str==\"python\"):\n",
+    "        print(\"That is very useful!\")\n",
+    "    elif (normalized_str==\"meditation\"):\n",
+    "        print(\"How nice!\")\n",
+    "    elif (normalized_str==\"magic\"):\n",
+    "        print(\"You're not at Hogwarts\")\n",
+    "    else:\n",
+    "        print(\"What is this COURSE?\")\n",
+    "\n",
+    "\n",
+    "statements(\"No course\")\n",
+    "statements(\"maths\")\n",
+    "statements(\"python\")\n",
+    "statements(\"meditation\")\n",
+    "statements(\"magic\")\n"
    ]
   },
   {
@@ -479,13 +623,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 avocado costs $18,912.39\n"
+     ]
+    }
+   ],
    "source": [
     "quantity = 1\n",
     "fruit = \"avocado\"\n",
-    "price = 1.8912392e4"
+    "price = 1.8912392e4\n",
+    "\n",
+    "def create_string(quantity, fruit, price):\n",
+    "    output_str = \"\"\n",
+    "    output_str += str(quantity)\n",
+    "    output_str += \" \"\n",
+    "    output_str += fruit\n",
+    "    if quantity > 1:\n",
+    "        output_str += \"s cost $\"\n",
+    "    else:\n",
+    "        output_str += \" costs $\"\n",
+    "    output_str += '{:,}'.format(round(price, 2))\n",
+    "    return output_str\n",
+    "\n",
+    "print(create_string(quantity, fruit, price))\n",
+    "    "
    ]
   },
   {
