--- a/labs/lab1/lab1.ipynb
+++ b/labs/lab1/lab1.ipynb
@@ -251,7 +251,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = [10, [3, 4], [5, [100, 200, [\"sdia\"]], 23, 11], 1, 7]"
+    "x = [10, [3, 4], [5, [100, 200, [\"sdia\"]], 23, 11], 1, 7]\n",
+    "\n"
    ]
   },
   {
