--- a/Labs/Lab4/lab4.ipynb
+++ b/Labs/Lab4/lab4.ipynb
@@ -7,8 +7,8 @@
     "# Practical session 4 - K-nearest neighbours (K-NN) classification with numpy, scikit-learn, cython and numba\n",
     "\n",
     "Students (pair):\n",
-    "- [Student 1]([link](https://github.com/username1))\n",
-    "- [Student 2]([link](https://github.com/username2))"
+    "- [Antonin Morel]([link](https://github.com/Cbonvieuxziz))\n",
+    "- [Benjamin Renoux]([link](https://github.com/Ben1306))"
    ]
   },
   {
