lab 4 first part

--- a/Labs/Lab2/lab2.ipynb
+++ b/Labs/Lab2/lab2.ipynb
@@ -557,7 +557,7 @@
     "    assert int(square_tv) == expected_square, \"Square test failed\"\n",
     "    assert int(non_square_tv) == expected_non_square, \"Non square test failed\"\n",
     "\n",
-    "    print(\"Test passed\")\n",
+    "    print(\"Test passed!\")\n",
     "\n",
     "tv_unit_test()\n",
     "\n"
