--- a/Labs/Lab5/lab5.ipynb
+++ b/Labs/Lab5/lab5.ipynb
@@ -257,11 +257,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "def markov(rho,A,nmax,rng, N):\n",
+    "\n",
+    "    # Initialize the possible states of the chain\n",
+    "    states = np.arange(N)\n",
+    "    \n",
+    "    def check_parameters(rho, A):\n",
+    "        '''\n",
+    "        Assert the input parameters are valid\n",
+    "        '''\n",
+    "        assert rho.shape == (N,), f\"rho as to be a vector of N={N} elements\"\n",
+    "        assert np.isclose(sum(rho), 1) and np.all(rho >= 0), \"rho have to be in the unit simplex\"\n",
+    "        assert A.shape == (N, N), f\"A have to be of size NxN ({N}x{N})\"\n",
+    "        assert np.all(A>=0) and np.allclose(np.sum(A, axis=1), [1 for _ in range(N)]), \"A has to be stochastic\"\n",
+    "    \n",
+    "    check_parameters(rho, A)\n",
+    "\n",
+    "    X_0 = np.random.choice(a=states, p=rho)\n",
+    "    \n",
+    "    for q in range(nmax):\n",
+    "        pass    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 10\n",
+    "A = np.array([[1] + [0 for _ in range(N-1)] for _ in range(N)])\n",
+    "rho = np.array([1/N for _ in range(N)])\n",
+    "\n",
+    "np.sum(A, axis=1)\n",
+    "markov(rho, A, None, None, N)"
    ]
   },
   {
